[package]
name = "astrorust"
version = "0.1.0"
authors = ["beastboy <daouda.e.kanoute@protonmail.com>", "Clozed <claire.marcory@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7"